--- a/TopFX.html
+++ b/TopFX.html
@@ -1,2 +1,50 @@
-<h1>hi<h1>
-    <h2>was</h2>
+<html lang="en">
+<head>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../TOPFX/TopFX.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+
+<body>
+
+
+    <header> 
+        <div class="container">
+            <div class="logo">
+                <img src="../TOPFX/LogoTop.png" alt="Image not found">
+            </div>
+        </div>
+        <div class="topNav" id="topNav">
+                <a href="#">About Us</a>
+                <a>|</a>
+                <a href="#">Contact Us</a>
+                <a>|</a>
+                <img src="Language.png" alt="Image not found">
+            </div>
+            <div class="topNav" id="topMenu">
+                    <a href="#">MENU TITLE 1</a>
+                    <a href="#">MENU TITLE 2</a>
+                    <a href="#">MENU TITLE 3</a>
+                </div>
+    </header>
+
+    <img src="RedLine.png" alt="Image not found">
+    <video height="400px" width="relative" controls autoplay>
+    <source src = "HeroVideo.mp4" type="video/mp4">
+    </video>
+    <img src="RedLine.png" alt="Image not found">
+    
+
+<footer>
+
+</footer>
+</body>
+</html>
