--- a/TopFX.html
+++ b/TopFX.html
@@ -41,6 +41,13 @@
     <source src = "HeroVideo.mp4" type="video/mp4">
     </video>
     <img src="RedLine.png" alt="Image not found">
+    <h1>Title01</h1>
+    <div id="Subtitles">
+            <img src="MultiAsset.png" alt="Image not found">
+            <img src="PlatAgnost.png" alt="Image not found">
+            <img src="TightSpreads.png" alt="Image not found">
+    </div>
+    <img src="RedLine.png" alt="Image not found">
     
 
 <footer>
