Progress on HTML menus.

--- a/TopFX.html
+++ b/TopFX.html
@@ -27,7 +27,7 @@
                 <a>|</a>
                 <a href="#">Contact Us</a>
                 <a>|</a>
-                <img src="Language.png" alt="Image not found">
+                <a href="#"><img src="Language.png" alt="Image not found"></a>
             </div>
             <div class="topNav" id="topMenu">
                     <a href="#">MENU TITLE 1</a>
@@ -48,6 +48,15 @@
             <img src="TightSpreads.png" alt="Image not found">
     </div>
     <img src="RedLine.png" alt="Image not found">
+    <img src="HeroImage2.png" alt="Image not found">
+    <img src="RedLine.png" alt="Image not found">
+    <h1>Title02</h1>
+    <div id="Subtitles2">
+            <img src="SubImage1.png" alt="Image not found">
+            <img src="SubImage2.png" alt="Image not found">
+            <img src="SubImage3.png" alt="Image not found">
+    </div>
+    <img src="FormImage.png" alt="Image not found">
     
 
 <footer>
