first css changes

--- a/TopFX.html
+++ b/TopFX.html
@@ -17,19 +17,21 @@
 
 
     <header> 
+            <div class="topNav" id="topNav">
+                    <a href="#">About Us</a>
+                    <a>|</a>
+                    <a href="#">Contact Us</a>
+                    <a>|</a>
+                    <a href="#"><img src="Language.png" alt="Image not found"></a>
+                </div>
         <div class="container">
             <div class="logo">
                 <img src="../TOPFX/LogoTop.png" alt="Image not found">
             </div>
         </div>
-        <div class="topNav" id="topNav">
-                <a href="#">About Us</a>
-                <a>|</a>
-                <a href="#">Contact Us</a>
-                <a>|</a>
-                <a href="#"><img src="Language.png" alt="Image not found"></a>
-            </div>
-            <div class="topNav" id="topMenu">
+        
+
+            <div class="topMenu" id="topMenu">
                     <a href="#">MENU TITLE 1</a>
                     <a href="#">MENU TITLE 2</a>
                     <a href="#">MENU TITLE 3</a>
