Getting in touch, question, regulators completed

--- a/TopFX.html
+++ b/TopFX.html
@@ -82,9 +82,25 @@
             <th><img src="SubImage3.png" alt="Image not found"></th>
         </tr>
     </table>
-
+<div class="containerFormImage">
     <img src="FormImage.png" alt="Image not found" width="100%">
-    
+    <div class="diveTitle">Get in touch</div>
+    <div class="diveName"><input type="text" class="form-control" placeholder="Name" width="200px"></div>
+    <div class="diveSurname"><input type="text" class="form-control" placeholder="Surname"></div>
+    <div class="divePhone"><input type="text" class="form-control" placeholder="Telephone Number"></div>
+
+</div>
+
+
+<p id="question" align="center">Do you have a question? <a href="#">Click here</a></p>
+
+<div class="botMenu" id="botMenu">
+        <a href="#">Regulator 1</a>
+        <a href="#">Regulator 2</a>
+        <a href="#">Regulator 3</a>
+        <a href="#">Regulator 4</a>
+        <a href="#">Regulator 5</a>
+    </div>
 
 <footer>
 
