Final commit, footer.

--- a/TopFX.html
+++ b/TopFX.html
@@ -101,8 +101,46 @@
         <a href="#">Regulator 4</a>
         <a href="#">Regulator 5</a>
     </div>
+<br></br>
+
+<div class="rWarning" id="rWarning"><p><b>Risk warning:</b> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div>
 
 <footer>
+<div class="testFooter" id="testFooter">
+    <div class="footerImage"><img src="FooterLogo.png" alt="Image not found"></div>
+    <div class="footerTable">
+        <table>
+            <tr>
+                <th>Footer Title 1</th>
+                <th>Footer Title 2</th>
+                <th>Footer Title 3</th>
+                <th>Footer Title 4</th>
+            </tr>
+            <tr>
+                <td>Footer Subtitle 1.1</td>
+                <td>Footer Subtitle 1.1</td>
+                <td>Footer Subtitle 1.1</td>
+                <td>Footer Subtitle 1.1</td>
+            </tr>
+             <tr>
+                <td>Footer Subtitle 1.2</td>
+                <td>Footer Subtitle 1.2</td>
+                <td>Footer Subtitle 1.2</td>
+                <td>Footer Subtitle 1.2</td>
+            </tr>
+            <tr>
+                <td>Footer Subtitle 1.3</td>
+                <td>Footer Subtitle 1.3</td>
+                <td>Footer Subtitle 1.3</td>
+                <td>Footer Subtitle 1.3</td>
+            </tr>
+
+        </table>
+
+        <div class="rightsRes"><p>Allrights reserved. © 2010 - 2017 TestFX Ltd.</p></div>
+</div>
+</div>
+
 
 </footer>
 </body>
